fix dark mode margin

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   flex-direction: column;
   align-items: center;
   height: 100%;
-  padding: 50px 50px 150px 50px;
+  padding: 30px 50px 150px 50px;
   overflow: hidden;
   justify-content: space-between;
 }
